--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", "Arial", sans-serif;
 }
 
 .header {
@@ -16,6 +16,7 @@
   background-color: #f2f2f2;
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .logo_place_header {
@@ -52,7 +53,7 @@
   color: #2f80ed;
 }
 
-.header__main-illiustration {
+.header__main-illustration {
   background-image: url("../images/header-image.png");
   background-size: cover;
   width: 765px;
@@ -101,13 +102,13 @@
   margin: 0 0 30px;
 }
 
-.two-columns__span_accent{
+.two-columns__span-accent {
   font-size: 24px;
   line-height: 34px;
   font-weight: bold;
 }
 
-.two-columns__paragraph:last-of-type {
+.two-columns__paragraph:last-child {
   margin: 0;
 }
 
@@ -182,6 +183,7 @@
   align-items: center;
   text-align: center;
   position: relative;
+  padding-top: 100px;
 }
 
 .feynman__title {
@@ -189,7 +191,7 @@
   font-size: 120px;
   line-height: 1.15;
   font-weight: bold;
-  margin: 100px 0 70px;
+  margin: 0 0 70px;
 }
 
 .feynman__subtitle {
@@ -197,7 +199,7 @@
   line-height: 51px;
   font-weight: normal;
   padding: 0;
-  margin-top: 0;
+  margin: 0;
 }
 
 .feynman__link {
@@ -206,7 +208,7 @@
   font-weight: normal;
   position: absolute;
   right: 48px;
-  bottom: 50%;
+  top: 50%;
   text-decoration: none;
   color: #000;
 }
@@ -220,7 +222,6 @@
   position: relative;
   overflow: hidden;
   padding: 90px 0 90px 0;
-  z-index: -2;
 }
 
 .kaufman__triangle {
@@ -231,11 +232,20 @@
   right: -210px;
   width: 877px;
   height: 877px;
-  z-index: -1;
+  z-index: 1;
 }
 
 .section-title_theme_dark {
   line-height: 69px;
+  z-index: 2;
+}
+
+.section-subtitle_theme_dark {
+  z-index: 2;
+}
+
+.table_theme_dark{
+  z-index: 2;
 }
 
 .table__cell_theme_dark {
@@ -288,7 +298,7 @@
   font-weight: bold;
 }
 
-.footer__list {
+.footer__column-links {
   list-style: none;
   padding: 0;
   margin: 0 0 16px;
