--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,7 +1,8 @@
 .cards__image {
-  background-size: cover;
+  display: block;
   border-radius: 50%;
   width: 160px;
   height: 160px;
   margin: 60px auto 43px;
+  object-fit: contain;
 }
