--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,5 +1,6 @@
 .header__title {
-  width: 730px;
+  max-width: 730px;
+  width: 100%;
   font-weight: bold;
   font-size: 102px;
   line-height: 96px;
