--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,8 +1,8 @@
 .khan__book-pic {
+  display: block;
   width: 620px;
   height: 608px;
-  background-image: url("../../../images/images_sprint-2/khan-book.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
   margin-right: 48px;
+  object-fit: cover;
+  object-position: top;
 }
