--- a/blocks/links-style/links-style.css
+++ b/blocks/links-style/links-style.css
@@ -1,4 +1,7 @@
+.links-style {
+  transition: opacity 0.6s ease-in;
+}
+
 .links-style:hover {
   opacity: .5;
-  transition: opacity 0.6s ease-in;
 }
