--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -2,6 +2,8 @@
   transform: translate(0, 50px);
   margin-right: 20px;
   border: 0;
+  width: 515px;
+  height: 316px;
 }
 
 .video__iframe:last-of-type {
