--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,7 @@
+@import url(../vendor/normalize.css);
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/rotation/rotation.css);
-@import url(../blocks/rotation/__element/rotation__element.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__title/header__title.css);
@@ -28,11 +28,6 @@
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__item/cards__item.css);
 @import url(../blocks/cards/__image/cards__image.css);
-@import url(../blocks/cards/__image/_picture/cards__image_picture_attention.css);
-@import url(../blocks/cards/__image/_picture/cards__image_picture_competence.css);
-@import url(../blocks/cards/__image/_picture/cards__image_picture_interliving.css);
-@import url(../blocks/cards/__image/_picture/cards__image_picture_question.css);
-@import url(../blocks/cards/__image/_picture/cards__image_picture_recall.css);
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__description/cards__description.css);
 
@@ -41,7 +36,6 @@
 @import url(../blocks/video/__iframe/video__iframe.css);
 
 @import url(../blocks/oakley/oaklay.css);
-
 
 @import url(../blocks/digits/digits.css);
 
