--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,8 +1,11 @@
 .cards {
   width: 920px;
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(auto-fill, 240px);
-  column-gap: 100px;
+  -webkit-column-gap: 100px;
+     -moz-column-gap: 100px;
+          column-gap: 100px;
   list-style: none;
   margin: 0;
   padding: 0;
