--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -5,9 +5,16 @@
   background-position: left bottom;
   background-repeat: no-repeat;
   background-size: 867px 637px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   position: relative;
   padding-top: 100px;
