--- a/blocks/form/__box/form__box.css
+++ b/blocks/form/__box/form__box.css
@@ -1,5 +1,7 @@
-.cards__item {
-  width: 240px;
+.form__box {
+  margin: 50px 0 0;
+  width: 39%;
+  font-size: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
