--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,6 +1,4 @@
-.techniques {
-  width: 80%;
-  padding-top: 100px;
+.form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -14,4 +12,11 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
+  background-color: #f2f2f2;
+  padding: 100px 0 80px;
+  margin: 0;
+  background-image: url("../../images/verbal-counting\ 2.png");
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-size: 523px;
+  }
