--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,8 +3,12 @@
   min-height: 600px;
   max-height: 756px;
   background-color: #f2f2f2;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: relative;
   overflow: hidden;
 }
