--- a/blocks/links-style/links-style.css
+++ b/blocks/links-style/links-style.css
@@ -1,4 +1,6 @@
 .links-style {
+  -webkit-transition: opacity 0.6s ease-in;
+  -o-transition: opacity 0.6s ease-in;
   transition: opacity 0.6s ease-in;
 }
 
