--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -1,7 +1,7 @@
 .form__button {
   background-color: #2f80ed;
   width: 50%;
-  height: 70px;
+  min-height: 70px;
   color: white;
   font-family: inherit;
   font-size: 18px;
@@ -10,5 +10,6 @@
   text-transform: uppercase;
   border: 0;
   margin: 0;
+  padding: 0;
   cursor: pointer;
 }
