--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -15,7 +15,7 @@
   background-color: #f2f2f2;
   padding: 100px 0 80px;
   margin: 0;
-  background-image: url("../../images/verbal-counting\ 2.png");
+  background-image: url("../../images/verbal-counting.png");
   background-repeat: no-repeat;
   background-position: right bottom;
   background-size: 523px;
