--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -7,12 +7,17 @@
   font-size: 18px;
   line-height: 20px;
   font-weight: normal;
+  transition: box-shadow .4s ease-in;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
 .form__item:focus {
   outline-color: #2f80ed;
+}
+
+.form__item:hover {
+  box-shadow: 0 0 8px rgba(0,0,0,0.5);
 }
 
 .form__item::-webkit-input-placeholder {
